tests/testcases/errors/BCE0022-1.boo
"""
BCE0022-1.boo(4,12): BCE0022: Cannot convert 'string' to 'int'.
"""
i as int = "foo"
